--- a/MySportsDiary/Base.lproj/LaunchScreen.storyboard
+++ b/MySportsDiary/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rugby-40781_1280" translatesAutoresizingMaskIntoConstraints="NO" id="t6g-qM-J1r">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rugby-loadingscreen" translatesAutoresizingMaskIntoConstraints="NO" id="t6g-qM-J1r">
                                 <rect key="frame" x="20" y="20" width="560" height="580"/>
                             </imageView>
                         </subviews>
@@ -37,6 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="rugby-40781_1280" width="1280" height="1256"/>
+        <image name="rugby-loadingscreen" width="1280" height="1256"/>
     </resources>
 </document>
